<resources>
    <string name="app_name">AndroidFragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clickMeButton">CLICK ME!</string>
    <string name="redRadioButton">Red</string>
    <string name="blueRadioButton">Blue</string>
    <string name="greenRadioButton">Green</string>
    <string name="editText" />
    <string name="hintText">Enter the text to be passed from fragment to activity here!</string>
</resources>
